[package]
name = "host"
version = "0.1.0"
edition = "2021"

[features]
default = []
# wasm64 = ["common/wasm64", "connect/wasm64"]  # disabled: wasm64 compiles but has JIT performance issues

[dependencies]
wasmtime = "29.0"
nix = { version = "0.27", features = ["mman", "fs"] }
anyhow = "1.0"
tempfile = "3.8"
common = { path = "../common" }
connect = { path = "../connect" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
