[package]
name = "node-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "node-agent"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1.0"
node-agent-common = { path = "../common" }
scheduler = { path = "../scheduler" }
